--- a/images/opensearch-dashboards/1.2/Dockerfile
+++ b/images/opensearch-dashboards/1.2/Dockerfile
@@ -1,4 +1,5 @@
-FROM opensearchproject/opensearch:1.2.0
+FROM opensearchproject/opensearch-dashboards:1.2.0
 
 RUN set -eux \
-    && /usr/share/opensearch-dashboards/bin/opensearch-dashboards-plugin remove securityDashboards
+    && /usr/share/opensearch-dashboards/bin/opensearch-dashboards-plugin remove securityDashboards \
+    && echo -e "server.host: '0'\nopensearch.hosts: [https://localhost:9200]" > /usr/share/opensearch-dashboards/config/opensearch_dashboards.yml
