--- a/images/varnish/debian/7.0/Dockerfile
+++ b/images/varnish/debian/7.0/Dockerfile
@@ -59,7 +59,9 @@ ENV VCL_CONFIG      /etc/varnish/default.vcl
 ENV CACHE_SIZE      256m
 ENV VARNISHD_PARAMS -p default_ttl=3600 -p default_grace=3600 \
     -p feature=+esi_ignore_https -p feature=+esi_disable_xml_check \
-    -p http_resp_hdr_len=65536 -p http_resp_size=98304 -p workspace_backend=131072
+    -p http_req_hdr_len=16384 \
+    -p http_resp_hdr_len=65536 -p http_resp_size=98304 \
+    -p workspace_backend=131072 -p workspace_client=131072
 ENV PROBE_DISABLED        true
 ENV PROBE_URL             healthcheck.php
 ENV BACKEND_HOST          nginx
