--- a/.goreleaser-local.yml
+++ b/.goreleaser-local.yml
@@ -4,7 +4,7 @@ before:
   hooks:
     - go mod download
     - go generate ./...
-    - go get -u github.com/go-bindata/go-bindata/...
+    - go install github.com/go-bindata/go-bindata/...
     - go-bindata -pkg internal -o internal/bindata.go templates/... VERSION.txt
 builds:
   - env:
