minor: add traefik.docker.network labels to the services

--- a/templates/environments/includes/allure.base.yml
+++ b/templates/environments/includes/allure.base.yml
@@ -10,6 +10,7 @@ services:
       - traefik.http.routers.{{ .reward_env_name }}-allure.tls=true
       - traefik.http.routers.{{ .reward_env_name }}-allure.rule=Host(`allure.{{ .traefik_domain }}`)
       - traefik.http.services.{{ .reward_env_name }}-allure.loadbalancer.server.port=4040
+      - traefik.docker.network={{ .reward_env_name }}_default
       - dev.reward.container.name=allure
       - dev.reward.environment.name={{ .reward_env_name }}
       # TODO; configure the Allure API; these rules result in allure sub-domain no longer routing
