--- a/templates/environments/includes/node.base.yml
+++ b/templates/environments/includes/node.base.yml
@@ -24,6 +24,7 @@ services:
       - traefik.http.routers.{{ .reward_env_name }}-node.rule=
           HostRegexp(`{subdomain:.+}.{{ .traefik_domain }}`) || Host(`{{ .traefik_domain }}`)
       - traefik.http.services.{{ .reward_env_name }}-node.loadbalancer.server.port=8000
+      - traefik.docker.network={{ .reward_env_name }}_default
       - dev.reward.container.name=node
       - dev.reward.environment.name={{ .reward_env_name }}
     volumes:
