--- a/templates/environments/includes/nginx.base.yml
+++ b/templates/environments/includes/nginx.base.yml
@@ -15,6 +15,7 @@ services:
       - traefik.http.routers.{{ .reward_env_name }}-nginx.rule=
         HostRegexp(`{subdomain:.+}.{{ .traefik_domain }}`) || Host(`{{ .traefik_domain }}`)
       - traefik.http.services.{{ .reward_env_name }}-nginx.loadbalancer.server.port=80
+      - traefik.docker.network={{ .reward_env_name }}_default
       - dev.reward.container.name=nginx
       - dev.reward.environment.name={{ .reward_env_name }}
     volumes:
