--- a/templates/environments/includes/rabbitmq.base.yml
+++ b/templates/environments/includes/rabbitmq.base.yml
@@ -10,6 +10,7 @@ services:
       - traefik.http.routers.{{ .reward_env_name }}-rabbitmq.tls=true
       - traefik.http.routers.{{ .reward_env_name }}-rabbitmq.rule=Host(`rabbitmq.{{ .traefik_domain }}`)
       - traefik.http.services.{{ .reward_env_name }}-rabbitmq.loadbalancer.server.port=15672
+      - traefik.docker.network={{ .reward_env_name }}_default
       - dev.reward.container.name=rabbitmq
       - dev.reward.environment.name={{ .reward_env_name }}
     volumes:
