--- a/images/nginx/context/rootfs/etc/nginx/available.d/application.conf.template
+++ b/images/nginx/context/rootfs/etc/nginx/available.d/application.conf.template
@@ -1,3 +1,24 @@
+gzip on;
+gzip_disable "msie6";
+
+gzip_comp_level 6;
+gzip_min_length 1100;
+gzip_buffers 16 8k;
+gzip_proxied any;
+gzip_types
+    text/plain
+    text/css
+    text/js
+    text/xml
+    text/javascript
+    application/javascript
+    application/x-javascript
+    application/json
+    application/xml
+    application/xml+rss
+    image/svg+xml;
+gzip_vary on;
+
 location ~* /\.(?!well-known).* { return 403; }
 
 location / {
