update varnish vcl settings for magento

--- a/images/varnish/context/rootfs/etc/varnish/default.vcl.template
+++ b/images/varnish/context/rootfs/etc/varnish/default.vcl.template
@@ -17,22 +17,22 @@ backend default {
     .between_bytes_timeout = {{ getenv "BETWEEN_BYTES_TIMEOUT" "300s" }};
 }
 
-{{- if eq (getenv "PROBE_DISABLED" "false") "true" }}
-#probe healthcheck {
-#    .url = "{{ getenv "PROBE_URL" "healthcheck.php" }}";
-#    .timeout = {{ getenv "PROBE_TIMEOUT" "2s" }};;
-#    .interval = {{ getenv "PROBE_INTERVAL" "5s" }};
-#    .window = {{ getenv "PROBE_WINDOW" "10" }};
-#    .threshold = {{ getenv "PROBE_THRESHOLD" "5" }};;
-#}
-{{- else }}
+{{- if eq (getenv "PROBE_ENABLED" "false") "true" }}
 probe healthcheck {
-    .url = "{{ getenv "PROBE_URL" "healthcheck.php" }}";
+    .url = "{{ getenv "PROBE_URL" "health_check.php" }}";
     .timeout = {{ getenv "PROBE_TIMEOUT" "2s" }};
     .interval = {{ getenv "PROBE_INTERVAL" "5s" }};
     .window = {{ getenv "PROBE_WINDOW" "10" }};
     .threshold = {{ getenv "PROBE_THRESHOLD" "5" }};
 }
+{{- else }}
+#probe healthcheck {
+#    .url = "{{ getenv "PROBE_URL" "health_check.php" }}";
+#    .timeout = {{ getenv "PROBE_TIMEOUT" "2s" }};
+#    .interval = {{ getenv "PROBE_INTERVAL" "5s" }};
+#    .window = {{ getenv "PROBE_WINDOW" "10" }};
+#    .threshold = {{ getenv "PROBE_THRESHOLD" "5" }};
+#}
 {{- end }}
 
 acl purge {
@@ -45,10 +45,10 @@ acl purge {
 sub vcl_init {
     new ddir = dynamic.director(
         port = "{{ getenv "BACKEND_PORT" "80" }}",
-        {{- if eq (getenv "PROBE_DISABLED" "false") "true" }}
-        #probe = healthcheck,
-        {{- else }}
+        {{- if eq (getenv "PROBE_ENABLED" "false") "true" }}
         probe = healthcheck,
+        {{- else }}
+        #probe = healthcheck,
         {{- end }}
         ttl = {{ getenv "DDIR_TTL" "60s" }},
     );
@@ -116,15 +116,18 @@ sub vcl_recv {
         return (pass);
     }
 
-    # Bypass customer, shopping cart, checkout and search requests
-    if (req.url ~ "/customer" || req.url ~ "/checkout" || req.url ~ "/catalogsearch") {
+    # Bypass customer, shopping cart, checkout
+    if (req.url ~ "/customer" || req.url ~ "/checkout") {
         return (pass);
     }
 
     # Bypass health check requests
-    if (req.url ~ "^/(pub/)?(health_check.php|health.php)$") {
+    if (req.url ~ "^/(pub/)?(health_check.php)$") {
         return (pass);
     }
+
+    # Set initial grace period usage status
+    set req.http.grace = "none";
 
     # normalize url in case of leading HTTP scheme and domain
     set req.url = regsub(req.url, "^http[s]?://", "");
@@ -159,8 +162,8 @@ sub vcl_recv {
         return (pass);
     }
 
-    # Authenticated GraphQL requests should not be cached by default
-    if (req.url ~ "/graphql" && req.http.Authorization ~ "^Bearer") {
+    # Bypass authenticated GraphQL requests without a X-Magento-Cache-Id
+    if (req.url ~ "/graphql" && !req.http.X-Magento-Cache-Id && req.http.Authorization ~ "^Bearer") {
         return (pass);
     }
 
@@ -168,7 +171,7 @@ sub vcl_recv {
 }
 
 sub vcl_hash {
-    if (req.http.cookie ~ "X-Magento-Vary=") {
+    if ((req.url !~ "/graphql" || !req.http.X-Magento-Cache-Id) && req.http.cookie ~ "X-Magento-Vary=") {
         hash_data(regsub(req.http.cookie, "^.*?X-Magento-Vary=([^;]+);*.*$", "\1"));
     }
 
@@ -188,6 +191,15 @@ sub vcl_hash {
 }
 
 sub process_graphql_headers {
+    if (req.http.X-Magento-Cache-Id) {
+        hash_data(req.http.X-Magento-Cache-Id);
+
+        # When the frontend stops sending the auth token, make sure users stop getting results cached for logged-in users
+        if (req.http.Authorization ~ "^Bearer") {
+            hash_data("Authorized");
+        }
+    }
+
     if (req.http.Store) {
         hash_data(req.http.Store);
     }
@@ -197,6 +209,9 @@ sub process_graphql_headers {
 }
 
 sub vcl_backend_response {
+
+    set beresp.grace = 3d;
+
     if (beresp.http.content-type ~ "text") {
         set beresp.do_esi = true;
     }
@@ -210,11 +225,9 @@ sub vcl_backend_response {
     }
 
     # cache only successfully responses and 404s
-    if (beresp.status != 200 && beresp.status != 404) {
-        set beresp.ttl = 0s;
-        set beresp.uncacheable = true;
-        return (deliver);
-    } elsif (beresp.http.Cache-Control ~ "private") {
+    if (beresp.status != 200 &&
+            beresp.status != 404 &&
+            beresp.http.Cache-Control ~ "private") {
         set beresp.uncacheable = true;
         set beresp.ttl = 86400s;
         return (deliver);
@@ -236,15 +249,22 @@ sub vcl_backend_response {
            set beresp.uncacheable = true;
     }
 
+   # If the cache key in the Magento response doesn't match the one that was sent in the request, don't cache under the request's key
+   if (bereq.url ~ "/graphql" && bereq.http.X-Magento-Cache-Id && bereq.http.X-Magento-Cache-Id != beresp.http.X-Magento-Cache-Id) {
+      set beresp.ttl = 0s;
+      set beresp.uncacheable = true;
+   }
+
     return (deliver);
 }
 
 sub vcl_deliver {
     # Always include hit/miss information in response
     if (resp.http.x-varnish ~ " ") {
-        set resp.http.X-Cache = "HIT";
+        set resp.http.X-Magento-Cache-Debug = "HIT";
+        set resp.http.Grace = req.http.grace;
     } else {
-        set resp.http.X-Cache = "MISS";
+        set resp.http.X-Magento-Cache-Debug = "MISS";
     }
     set resp.http.X-Cache-Hits = obj.hits;
 
@@ -253,6 +273,38 @@ sub vcl_deliver {
         set resp.http.Pragma = "no-cache";
         set resp.http.Expires = "-1";
         set resp.http.Cache-Control = "no-store, no-cache, must-revalidate, max-age=0";
+    }
+
+    if (!resp.http.X-Magento-Debug) {
+        unset resp.http.Age;
+    }
+    unset resp.http.X-Magento-Debug;
+    unset resp.http.X-Magento-Tags;
+    unset resp.http.X-Powered-By;
+    unset resp.http.Server;
+    unset resp.http.X-Varnish;
+    unset resp.http.Via;
+    unset resp.http.Link;
+}
+
+sub vcl_hit {
+    if (obj.ttl >= 0s) {
+        # Hit within TTL period
+        return (deliver);
+    }
+    if (std.healthy(req.backend_hint)) {
+        if (obj.ttl + 300s > 0s) {
+            # Hit after TTL expiration, but within grace period
+            set req.http.grace = "normal (healthy server)";
+            return (deliver);
+        } else {
+            # Hit after TTL and grace expiration
+            return (restart);
+        }
+    } else {
+        # server is not healthy, retrieve from cache
+        set req.http.grace = "unlimited (unhealthy server)";
+        return (deliver);
     }
 }
 
