update automatic dns resolution with resolved config

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -52,7 +52,7 @@ linters:
     - nakedret
     #    - nestif
     - noctx
-    - nolintlint
+    #    - nolintlint
     #    - prealloc
     - rowserrcheck
     # deprecated
