varnish: fix a typo in supervisord config

--- a/images/varnish/context/rootfs/etc/supervisor/conf.d/varnish.conf
+++ b/images/varnish/context/rootfs/etc/supervisor/conf.d/varnish.conf
@@ -5,7 +5,7 @@ startsecs=0
 autorestart=false
 
 [program:varnishd]
-command=varnishd -F -f %(ENV_VCL_CONFIG)s -s %(ENV_CACHE_TYPE),%(ENV_CACHE_SIZE)s %(ENV_VARNISHD_PARAMS)s
+command=varnishd -F -f %(ENV_VCL_CONFIG)s -s %(ENV_CACHE_TYPE)s,%(ENV_CACHE_SIZE)s %(ENV_VARNISHD_PARAMS)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/1
