--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -55,7 +55,7 @@ nfpms:
       windows: Windows
       386: i386
       amd64: x86_64
-    maintainer: Janos Miko <janos.miko@itgcommerce.com>
+    maintainer: Janos Miko <info@janosmiko.com>
     description: Reward is CLI utility for orchestrating Docker based development environments.
     license: MIT
     formats:
@@ -75,7 +75,7 @@ brews:
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
     commit_author:
       name: Janos Miko
-      email: mixe3y@gmail.com
+      email: info@janosmiko.com
     folder: Formula
     description: Reward is CLI utility for orchestrating Docker based development environments.
     license: MIT
@@ -85,4 +85,3 @@ brews:
         type: optional
       - name: mutagen
         type: optional
-
