--- a/.github/workflows/main-test.yml
+++ b/.github/workflows/main-test.yml
@@ -20,5 +20,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.19
+      - name: Download deps
+        run: go mod download -x
       - name: Test
         run: go test -race -v ./...
