--- a/images/php-fpm/context/wordpress-web/rootfs/etc/nginx/nginx.conf
+++ b/images/php-fpm/context/wordpress-web/rootfs/etc/nginx/nginx.conf
@@ -1,6 +1,6 @@
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log notice;
+error_log  /proc/self/fd/2 notice;
 pid        /home/www-data/nginx.pid;
 
 events {
@@ -16,7 +16,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /proc/self/fd/2  main;
 
     sendfile        on;
     #tcp_nopush     on;
