--- a/.github/workflows/dev-docker-image-php.yml
+++ b/.github/workflows/dev-docker-image-php.yml
@@ -227,6 +227,42 @@ jobs:
           DOCKER_USE_BUILDX: "true"
           DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
 
+  wordpress-web:
+    name: Wordpress WEB - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
+    runs-on: ubuntu-latest
+    environment:
+      name: develop
+    needs: wordpress
+    strategy:
+      matrix:
+        docker_base_images: [ "debian" ]
+        php_version: [ "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        build_group: [ "wordpress-web" ]
+    steps:
+      - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
+      - run: ./images/scripts/build.sh "${BUILD_GROUP}"
+        env:
+          BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
+          PHP_VERSION: ${{ matrix.php_version }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
+          PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
+
   shopware:
     name: Shopware - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
     runs-on: ubuntu-latest
@@ -238,6 +274,42 @@ jobs:
         docker_base_images: [ "debian" ]
         php_version: [ "7.3", "7.4", "8.0", "8.1" ]
         build_group: [ "shopware" ]
+    steps:
+      - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
+      - run: ./images/scripts/build.sh "${BUILD_GROUP}"
+        env:
+          BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
+          PHP_VERSION: ${{ matrix.php_version }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
+          PUSH: "true"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm64"
+
+  shopware-web:
+    name: Shopware WEB - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
+    runs-on: ubuntu-latest
+    environment:
+      name: develop
+    needs: shopware
+    strategy:
+      matrix:
+        docker_base_images: [ "debian" ]
+        php_version: [ "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        build_group: [ "shopware-web" ]
     steps:
       - uses: actions/checkout@v1
       - name: Login to DockerHub
